# localvectordb

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT-FIXES.md  AUDIT-v0.1.0.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  claude-code-review-112725.md  pyproject.toml  remote-layer-streaming.md  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  codeql.yml  docker.yml  docs.yml  release-npm.yml  release.yml  test.yml
benchmarks/: BASELINE.md  HIERARCHICAL_LOCAL_ENCODERS.md  RETRIEVAL_BASELINE.md  __init__.py  analyze_fusion.py  beir_data.py  config.py  datasets.py  eval_hierarchical.py  eval_retrieval.py  metrics.py  profile_baseline.py  providers.py  qasper_data.py  reporting.py  retrieval_baseline.json  retrieval_baseline_nfcorpus.json  run.py  run_hier_ollama.sh  summarize.py  superdocs.py  tier1_ann.py  tier2_fullstack.py  utils.py
docs/source/: async.rst  backup.rst  chunking.rst  cli.rst  client.rst  comparison.rst  conf.py  config.params.rst  config.rst  document-scoring.rst  embeddings.rst  factcheck.rst  file-extraction.rst  hierarchical-evaluation.rst  hierarchical.rst  index.rst  installation.rst  localvectordb.async_database.rst  localvectordb.chunking.rst  localvectordb.core.rst  localvectordb.database.rst  localvectordb.embeddings.rst  localvectordb.exceptions.rst  localvectordb.factory.rst  localvectordb.utils.rst  localvectordb_server.cli.rst  localvectordb_server.config.rst  localvectordb_server.routes.rst  mcp.rst  metadata.filtering.rst  migrations.rst  modules.rst  overview.rst  performance.rst  query.rst  querybuilder.rst  quickstart.rst  recipes.rst  recipes2.rst  routes.rst  (+10 more)
docs/source/modules/: index.rst  localvectordb.async_client.rst  localvectordb.backup.rst  localvectordb.chunking.rst  localvectordb.client.rst  localvectordb.core.rst  localvectordb.cursor.rst  localvectordb.database.base.rst  localvectordb.database.rst  localvectordb.embeddings.rst  localvectordb.exceptions.rst  localvectordb.extractors.all2md_extractor.rst  localvectordb.extractors.office_extractors.rst  localvectordb.extractors.other_extractors.rst  localvectordb.extractors.pdf_extractors.rst  localvectordb.extractors.rst  localvectordb.extractors.text_extractors.rst  localvectordb.extractors.web_extractors.rst  localvectordb.factory.rst  localvectordb.migration.rst  localvectordb.patching.rst  localvectordb.query_builder.rst  localvectordb.reranking.rst  localvectordb.rst  localvectordb.section_detection.rst  localvectordb.section_metadata.rst  localvectordb.sqlite_tuning.rst  localvectordb.utils.rst  localvectordb.validation.llm.rst  localvectordb.validation.rst  localvectordb.versioning.rst  localvectordb.visualization.clustering.rst  localvectordb.visualization.dimensionality.rst  localvectordb.visualization.graph.rst  localvectordb.visualization.interactive.rst  localvectordb.visualization.plots.rst  localvectordb.visualization.rst  localvectordb.visualization.types.rst  localvectordb_server.cli.rst  localvectordb_server.config.rst  (+12 more)
docs/source/sdk/: client.rst  database.rst  errors.rst  examples.rst  index.rst  quickstart.rst  streaming.rst  upload.rst
docs/source/server/: advanced.rst  config.params.rst  config.rst  index.rst  quickstart.rst  routes.rst
docs/source/tutorials/: index.rst  tutorial.faqbot.rst  tutorial.fivemin.rst  tutorial.indexdownloads.rst  tutorial.providerplugin.rst  tutorial.rag.rst  tutorial.serverjs.rst
examples/: README.md  section_vs_chunk_retrieval.py
examples/sample_corpus/: data-retention.md  deployment-pipeline.md  incident-response.md  judgments.json
mcpb/: README.md  manifest.json  pyproject.toml
mcpb/src/: server.py
scripts/: activate.ps1  lint.sh  test.ps1
scripts/e2e/: .gitignore  README.md  _common.py  e2e_cli.py  e2e_files.py  e2e_hier.py  e2e_local.py  e2e_patch.py  e2e_server.py  make_fixtures.py  run_all.py
sdk/js/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/js/src/: client.ts  database.ts  errors.ts  http.ts  index.ts  sse.ts  types.ts  upload.ts
sdk/js/tests/: client.test.ts  database.test.ts  http.test.ts  sse.test.ts
skills/document-comparison/: SKILL.md
skills/fact-checking/: SKILL.md
skills/semantic-search/: SKILL.md
src/localvectordb/: __init__.py  _filters.py  _interfaces.py  _pools.py  _schema.py  _sqlite_retry.py  _sqlite_uri.py  async_client.py  async_database.py  backup.py  chunking.py  client.py  core.py  cursor.py  database.py  database_original.py  document_portions.py  embeddings.py  exceptions.py  factory.py  migration.py  patching.py  query_builder.py  reranking.py  section_detection.py  section_metadata.py  sqlite_tuning.py  utils.py  versioning.py
src/localvectordb/database/: __init__.py  _comparison.py  _core.py  _crud.py  _faiss_utils.py  _ingest.py  base.py  (+6 more)
src/localvectordb_server/: __init__.py  _auth.py  _cache.py  _checkdeps.py  _cli_entry.py  _dbmanager.py  _error_handlers.py  _keymanager.py  _logcfg.py  _serializers.py  app.py  cli.py  config.py  inspector.py  keymanager.py  routes.py
tests/: conftest.py  pytest.ini  readme.md  test_api_parity.py  test_async_database.py  test_audit_low.py  test_audit_medium.py  test_backup_consistency.py  test_backup_edge_cases_simple.py  test_backup_restore.py  test_chunking.py  test_cli.py  test_cli_chunk_ingest.py  test_cli_get_parts.py  test_client.py  test_comparison.py  test_config.py  test_context_sizing.py  test_core.py  test_cursor.py  test_database.py  test_database_async.py  test_database_search_advanced.py  test_dbmanager.py  test_docs_api_coverage.py  test_embedding_ssrf.py  test_embeddings.py  test_examples.py  test_exceptions.py  test_extractors.py  test_factory.py  test_faiss_sqlite_invariant.py  test_filter_overfetch.py  test_filters.py  test_grep.py  test_hierarchical.py  test_hostmatch.py  test_hybrid_fusion.py  test_index_persistence_mmap.py  test_ingest_error_handling.py  (+26 more)
(+76 files in other folders)
