[project]
name = "localvectordb"
version = "1.0.0"
description = "A lightweight vector database using SQLite, FAISS and pluggable embedding providers, including Ollama and OpenAI"
readme = "README.md"
authors = [
    { name = "Thomas.Villani", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "faiss-cpu>=1.11.0",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "tiktoken>=0.9.0",
]


[project.entry-points."localvectordb.embedding_providers"]
ollama = "localvectordb.embeddings:OllamaEmbeddings"
openai = "localvectordb.embeddings:OpenAIEmbeddings"
mock = "localvectordb.embeddings:MockEmbeddings"

[project.entry-points."localvectordb_server.file_extractors"]
docx = "localvectordb_server.extractors.office_extractors:DocxExtractor"
pptx = "localvectordb_server.extractors.office_extractors:PptxExtractor"
xlsx = "localvectordb_server.extractors.office_extractors:XlsxExtractor"
html = "localvectordb_server.extractors.web_extractors:HTMLExtractor"
xml = "localvectordb_server.extractors.web_extractors:XMLExtractor"
text = "localvectordb_server.extractors.text_extractors:TextFileExtractor"
pypdf = "localvectordb_server.extractors.pdf_extractors:PyPDFExtractor"
pdfplumber = "localvectordb_server.extractors.pdf_extractors:PDFPlumberExtractor"
epub = "localvectordb_server.extractors.other_extractors:EPubExtractor"
rtf = "localvectordb_server.extractors.other_extractors:RTFExtractor"

[project.scripts]
lvdb = "localvectordb_server.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
server = [
    "bcrypt>=4.3.0",
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "flask-cors>=6.0.0",
    "flask-limiter>=3.12",
]

file-extraction = [
    "openpyxl>=3.1.5",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pdfplumber>=0.11.6",
    "pypdf>=3.1.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "ebooklib>=0.19",
    "striprtf>=0.0.29",
]
file-extraction-office = [
    "openpyxl>=3.1.5",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
]
file-extraction-pdf = [
    "pdfplumber>=0.11.6",
    "pypdf2>=3.0.1",
]
file-extraction-web = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
]
file-extraction-rtf-epub = [
    "ebooklib>=0.19",
    "striprtf>=0.0.29",
]
dev = [
    "freezegun>=1.5.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.7.0",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "localvectordb[file-extraction]",
    "localvectordb[server]"
]
async = [
    "aiosqlite>=0.21.0",
]


[tool.bumpversion]
current_version = "1.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = "release = '{current_version}"
replace = "release = '{new_version}"
