[project]
name = "localvectordb"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
description = "A lightweight vector database using SQLite, FAISS and pluggable embedding providers, including Ollama and OpenAI"
readme = "README.md"
authors = [
    { name = "Tom Villani, Ph.D.", email = "thomas.villani@gmail.com" }
]
maintainers = [
    { name = "Tom Villani, Ph.D.", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.21.0",
    "faiss-cpu>=1.11.0",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "tiktoken>=0.9.0",
]


[project.entry-points."localvectordb.embedding_providers"]
ollama = "localvectordb.embeddings:OllamaEmbeddings"
openai = "localvectordb.embeddings:OpenAIEmbeddings"
mock = "localvectordb.embeddings:MockEmbeddings"
google = "localvectordb.embeddings:GoogleEmbeddings"
jina = "localvectordb.embeddings:JinaEmbeddings"
sentence_transformers = "localvectordb.embeddings:SentenceTransformerEmbeddings"
huggingface = "localvectordb.embeddings:HuggingFaceInferenceEmbeddings"
huggingface_local = "localvectordb.embeddings:HuggingFaceLocalEmbeddings"

[project.entry-points."localvectordb.reranker_providers"]
jina = "localvectordb.reranking:JinaReranker"
sentence_transformers = "localvectordb.reranking:SentenceTransformersReranker"
huggingface = "localvectordb.reranking:HuggingFaceReranker"
mock = "localvectordb.reranking:MockReranker"

[project.entry-points."localvectordb.file_extractors"]
docx = "localvectordb.extractors.office_extractors:DocxExtractor"
pptx = "localvectordb.extractors.office_extractors:PptxExtractor"
xlsx = "localvectordb.extractors.office_extractors:XlsxExtractor"
html = "localvectordb.extractors.web_extractors:HTMLExtractor"
xml = "localvectordb.extractors.web_extractors:XMLExtractor"
text = "localvectordb.extractors.text_extractors:TextFileExtractor"
pypdf = "localvectordb.extractors.pdf_extractors:PyPDFExtractor"
pdfplumber = "localvectordb.extractors.pdf_extractors:PDFPlumberExtractor"
epub = "localvectordb.extractors.other_extractors:EPubExtractor"
rtf = "localvectordb.extractors.other_extractors:RTFExtractor"

[project.scripts]
lvdb = "localvectordb_server.cli:cli"

[project.urls]
Homepage = "https://github.com/thomas-villani/localvectordb"
Repository = "https://github.com/thomas-villani/localvectordb"
Documentation = "https://thomas-villani.github.io/localvectordb/"
"Bug Tracker" = "https://github.com/thomas-villani/localvectordb/issues"
Changelog = "https://github.com/thomas-villani/localvectordb/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localvectordb", "src/localvectordb_server"]

[tool.hatch.build.targets.sdist]
# Keep the source distribution to the Python package + its tests/docs. Internal
# notes (competitive analysis, code reviews, scratch files) are gitignored and so
# already excluded; this additionally drops dev-only and non-Python assets.
exclude = [
    "/sdk",
    "/skills",
    "/benchmarks",
    "/scripts",
    "/docs/build",
    "/.github",
    "/.claude",
    "/.idea",
    "/CLAUDE.md",
    "/.env.example",
    "/.pre-commit-config.yaml",
    "/.python-version",
    "/.gitignore",
    "/uv.lock",
]

[project.optional-dependencies]
server = [
    "bcrypt>=4.3.0",
    "cachelib>=0.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "slowapi>=0.1.9",
    "psutil>=7.1.0",
    "tomli-w>=1.2.0",
]

mcp = [
    "fastmcp>=2.12.2",
]

file-extraction = [
    "openpyxl>=3.1.5",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pdfplumber>=0.11.6",
    "pypdf>=3.1.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "defusedxml>=0.7.1",  # XXE protection for XML parsing
    "ebooklib>=0.19",
    "striprtf>=0.0.29",
]
file-extraction-office = [
    "openpyxl>=3.1.5",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
]
file-extraction-pdf = [
    "pdfplumber>=0.11.6",
    "pypdf>=3.1.0",
]
file-extraction-web = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "defusedxml>=0.7.1",  # XXE protection for XML parsing
]
file-extraction-rtf-epub = [
    "ebooklib>=0.19",
    "striprtf>=0.0.29",
]
sentence-transformers = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]
local-embeddings = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
]
visualization = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]
visualization-interactive = [
    "localvectordb[visualization]",
    "plotly>=5.15.0",
]
benchmark = [
    "h5py>=3.0.0",
    "psutil>=5.9.0",
]
all = [
    "localvectordb[server]",
    "localvectordb[file-extraction]",
    "localvectordb[mcp]",
    "localvectordb[sentence-transformers]",
    "localvectordb[visualization]",
]

# Development tooling lives in a PEP 735 dependency group (not an extra) so that
# `uv sync` / `uv sync --dev` install it. It bundles the runtime extras needed to
# run the full test suite, but intentionally omits [mcp]: fastmcp pulls pywin32,
# which is prone to AV-quarantine install failures on Windows. MCP contributors
# should add it explicitly:  uv sync --dev --extra mcp
[dependency-groups]
dev = [
    # Test + lint + type-check + security + format tooling
    "freezegun>=1.5.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.7.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "mypy>=1.17.1",
    "bandit[toml]>=1.8.0",
    "black>=24.0.0",
    "pre-commit>=4.0.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    # Docs
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    # Runtime extras exercised by the test suite (mcp deliberately excluded)
    "localvectordb[server]",
    "localvectordb[file-extraction]",
    "localvectordb[visualization]",
]


[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/localvectordb/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = "release = '{current_version}"
replace = "release = '{new_version}"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101", "B110", "B112", "B108", "B608"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config --tb=short --durations=10"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests that exercise multiple components together",
    "slow: Slow or timing-sensitive tests (excluded from the fast suite)",
    "network: Tests that require network access",
    "database: Tests that involve database operations",
    "embedding: Tests that involve embedding operations",
    "chunking: Tests that involve text chunking",
    "client: Tests for the remote client",
    "performance: Performance and benchmark tests",
    "regression: Regression tests for specific bug fixes",
]

[tool.coverage.run]
source = ["localvectordb", "localvectordb_server"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
