[project]
name = "localvectordb"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
description = "A lightweight vector database using SQLite, FAISS and pluggable embedding providers, including Ollama and OpenAI"
readme = "README.md"
authors = [
    { name = "Tom Villani, Ph.D.", email = "thomas.villani@gmail.com" }
]
maintainers = [
    { name = "Tom Villani, Ph.D.", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "all2md[docx,epub,html,markdown,odf,openapi,org,pdf,pptx,rst,rtf,xlsx]>=1.7.1",
    # all2md's HTML parser enforces a runtime beautifulsoup4>=4.14.2 check that
    # its own packaging metadata under-specifies (it depends on bs4 with no
    # floor), so the resolver can otherwise pin an older bs4 that fails HTML
    # extraction at parse time. Pin the floor explicitly here.
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.14.2",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    # Used by the core auto-tuner (localvectordb.sqlite_tuning) for RAM/CPU
    # detection; must be a base dependency or `import localvectordb` fails on
    # installs without the [server] extra.
    "psutil>=5.9.0",
    "tiktoken>=0.13.0",
]


[project.entry-points."localvectordb.embedding_providers"]
ollama = "localvectordb.embeddings:OllamaEmbeddings"
openai = "localvectordb.embeddings:OpenAIEmbeddings"
mock = "localvectordb.embeddings:MockEmbeddings"
google = "localvectordb.embeddings:GoogleEmbeddings"
jina = "localvectordb.embeddings:JinaEmbeddings"
sentence_transformers = "localvectordb.embeddings:SentenceTransformerEmbeddings"
huggingface = "localvectordb.embeddings:HuggingFaceInferenceEmbeddings"
huggingface_local = "localvectordb.embeddings:HuggingFaceLocalEmbeddings"

[project.entry-points."localvectordb.reranker_providers"]
jina = "localvectordb.reranking:JinaReranker"
sentence_transformers = "localvectordb.reranking:SentenceTransformersReranker"
huggingface = "localvectordb.reranking:HuggingFaceReranker"
mock = "localvectordb.reranking:MockReranker"

[project.entry-points."localvectordb.file_extractors"]
# A single all2md-backed extractor covers every built-in format (20+ document
# formats and 200+ source/text formats). Additional formats can still be plugged
# in by registering an extractor under this entry-point group with a higher
# priority than All2MdExtractor (10).
all2md = "localvectordb.extractors.all2md_extractor:All2MdExtractor"

[project.scripts]
lvdb = "localvectordb_server._cli_entry:main"

[project.urls]
Homepage = "https://github.com/thomas-villani/localvectordb"
Repository = "https://github.com/thomas-villani/localvectordb"
Documentation = "https://thomas-villani.github.io/localvectordb/"
"Bug Tracker" = "https://github.com/thomas-villani/localvectordb/issues"
Changelog = "https://github.com/thomas-villani/localvectordb/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localvectordb", "src/localvectordb_server"]

[tool.hatch.build.targets.sdist]
# Keep the source distribution to the Python package + its tests/docs. Internal
# notes (competitive analysis, code reviews, scratch files) live under /etc and
# are gitignored; we ALSO list them explicitly here so a stray un-ignore can
# never silently publish them. This block additionally drops dev-only and
# non-Python assets.
exclude = [
    "/sdk",
    "/skills",
    "/benchmarks",
    "/scripts",
    "/etc",
    "/todo.md",
    "/remote-layer-streaming.md",
    "/docs/build",
    "/.github",
    "/.claude",
    "/.idea",
    "/CLAUDE.md",
    "/.env.example",
    "/.pre-commit-config.yaml",
    "/.python-version",
    "/.gitignore",
    "/uv.lock",
]

[project.optional-dependencies]
server = [
    "bcrypt>=5.0.0",
    "cachelib>=0.14.0",
    # The CLI imports click directly; declare it rather than relying on the
    # transitive pin from uvicorn[standard]. 8.2+ required (ctx.args behavior
    # the lazy-DB-open logic in the CLI depends on).
    "click>=8.2",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    "sse-starlette>=3.4.4",
    "slowapi>=0.1.9",
    "tomli-w>=1.2.0",
]

mcp = [
    "fastmcp>=3.4.1",
]

# File extraction is provided by all2md, which is a core dependency. The common
# document formats (docx, pdf, pptx, xlsx, html, epub, rtf, odf, rst, org,
# openapi, markdown) work out of the box with a base `pip install localvectordb`.
#
# This extra adds all2md's extended/less-common format parsers plus the HTML
# readability + sanitizer helpers. It deliberately omits `pdf-layout` (Polyform
# Noncommercial license, incompatible with this project's MIT license), OCR
# (see file-extraction-ocr below), and `chm` (pulls `pychm`, which requires a
# C build and only covers legacy Windows .chm help files).
file-extraction = [
    "all2md[archive,enex,fb2,html-readability,latex,outlook,sanitizer,textile,wiki]>=1.7.1",
]
# Optional OCR support for scanned/image-only PDFs (Tesseract engine; also
# requires the Tesseract system binary to be installed). Excludes the EasyOCR
# engine (heavy PyTorch dependency) and pdf-layout (noncommercial license).
file-extraction-ocr = [
    "all2md[ocr]>=1.7.1",
]
sentence-transformers = [
    "sentence-transformers>=3.0.0",
    "torch>=2.12.1",
]
local-embeddings = [
    "transformers>=4.40.0",
    "torch>=2.12.1",
]
visualization = [
    "scikit-learn>=1.9.0",
    "matplotlib>=3.10.9",
]
visualization-interactive = [
    "localvectordb[visualization]",
    "plotly>=5.15.0",
]
benchmark = [
    "h5py>=3.0.0",
]
all = [
    "localvectordb[server]",
    "localvectordb[file-extraction]",
    "localvectordb[mcp]",
    "localvectordb[sentence-transformers]",
    "localvectordb[local-embeddings]",
    "localvectordb[visualization]",
]

# Development tooling lives in a PEP 735 dependency group (not an extra) so that
# `uv sync` / `uv sync --dev` install it. It bundles the runtime extras needed to
# run the full test suite, but intentionally omits [mcp]: fastmcp pulls pywin32,
# which is prone to AV-quarantine install failures on Windows. MCP contributors
# should add it explicitly:  uv sync --dev --extra mcp
[dependency-groups]
dev = [
    # Test + lint + type-check + security + format tooling
    "freezegun>=1.5.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.7.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "mypy>=1.17.1",
    "bandit[toml]>=1.8.0",
    "black>=24.0.0",
    "pre-commit>=4.0.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    # Docs
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-rtd-theme>=3.0.2",
    # Runtime extras exercised by the test suite (mcp deliberately excluded)
    "localvectordb[server]",
    "localvectordb[file-extraction]",
    "localvectordb[visualization]",
]


[tool.bumpversion]
current_version = "0.1.0"
# PEP 440 versions with an optional release-candidate suffix (e.g. 0.1.0rc1).
# A final release omits the pre-release parts; pre_l defaults to "final" which
# selects the short serialize form below.
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:(?P<pre_l>rc)(?P<pre_n>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]
# Quote the default search (used to rewrite this file's own current_version).
# The quotes matter for pre-release bumps: "0.1.0" does not match inside
# "0.1.0rc1", so a 0.1.0 -> 0.1.0rc1 bump cannot compound an already-updated
# value into "0.1.0rc1rc1".
search = "\"{current_version}\""
replace = "\"{new_version}\""
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

# Release-candidate label. "final" is the optional value, so bumping pre_l from
# "rc" to "final" drops the suffix (0.1.0rc1 -> 0.1.0). Start a new RC with
# `bump-my-version bump --new-version <X.Y.Z>rc1`, iterate with
# `bump-my-version bump pre_n`, and finalize with `bump-my-version bump pre_l`.
[tool.bumpversion.parts.pre_l]
values = ["rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
# Anchor to the start of the line so this only matches project.version and never
# the current_version key above (which contains "version = ..." as a substring).
regex = true
search = '(?m)^version = "{current_version}"'
replace = 'version = "{new_version}"'

# Keep this [tool.bumpversion] current_version in sync explicitly. The implicit
# config updater goes inert with the quoted default search above, so this is the
# sole updater of the key (no double-application), and the anchor keeps it off
# the project.version line.
[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '(?m)^current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/localvectordb/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'

# Keep the MCP bundle (mcpb/) in version lock-step with the package: the
# manifest's own version, the bundle pyproject's version, and its pin on the
# published package.
[[tool.bumpversion.files]]
filename = "mcpb/manifest.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "mcpb/pyproject.toml"
regex = true
search = '(?m)^version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "mcpb/pyproject.toml"
regex = true
search = 'localvectordb\[mcp\]>={current_version}'
replace = 'localvectordb[mcp]>={new_version}'


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = []

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency/param markers are designed to be called in argument
# defaults; they are effectively immutable singletons, so B008 does not apply.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Header",
    "fastapi.Cookie",
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101", "B110", "B112", "B108", "B608"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Project root on sys.path so tests can import the (unpackaged) `benchmarks` module.
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config --tb=short --durations=10"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests that exercise multiple components together",
    "slow: Slow or timing-sensitive tests (excluded from the fast suite)",
    "network: Tests that require network access",
    "database: Tests that involve database operations",
    "embedding: Tests that involve embedding operations",
    "chunking: Tests that involve text chunking",
    "client: Tests for the remote client",
    "performance: Performance and benchmark tests",
    "regression: Regression tests for specific bug fixes",
]

[tool.coverage.run]
source = ["localvectordb", "localvectordb_server"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
